compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__record_update_does_not_stop_at_first_invalid_field_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(a: Int, b: Bool)\n}\n\npub fn go(wibble: Wibble) {\n    Wibble(..wibble, a: 2, a: 3, b: 1)\n}"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(a: Int, b: Bool)
}

pub fn go(wibble: Wibble) {
    Wibble(..wibble, a: 2, a: 3, b: 1)
}

----- ERROR
error: Duplicate argument
  ┌─ /src/one/two.gleam:7:28
  │
7 │     Wibble(..wibble, a: 2, a: 3, b: 1)
  │                            ^^^^

The labelled argument `a` has already been supplied.

error: Type mismatch
  ┌─ /src/one/two.gleam:7:34
  │
7 │     Wibble(..wibble, a: 2, a: 3, b: 1)
  │                                  ^^^^

Expected type:

    Bool

Found type:

    Int
