compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__record_update_unknown_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wubble: Bool)\n  Wobble(wobble: Int, wubble: Bool)\n}\n\npub fn wibble(value: Wibble) {\n  Wibble(..value, wubble: True)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(wibble: Int, wubble: Bool)
  Wobble(wobble: Int, wubble: Bool)
}

pub fn wibble(value: Wibble) {
  Wibble(..value, wubble: True)
}


----- ERROR
error: Unsafe record update
  ┌─ /src/one/two.gleam:8:12
  │
8 │   Wibble(..value, wubble: True)
  │            ^^^^^ I'm not sure this is always a `Wibble`


I cannot use this value to build an updated `Wibble` as it could be some
other variant.

Consider pattern matching on it with a case expression and then
constructing a new record with its values.
